ADD Navbar elements Contact, Licence, About, How, References.

--- a/www/citing.html
+++ b/www/citing.html
@@ -9,7 +9,7 @@
   <p>To cite this tools please note the folowing links :</p>
   <ul>
   <li><i class="fa fa-github" aria-hidden="true"></i> : github link</li>
-    <li><i class="fa fa-external-link" aria-hidden="true"></i> : zenodo link </li>
+    <li><i class="fa fa-server" aria-hidden="true"></i> : server link </li>
       </ul>
       
       </body>
