ADD rsconnect package , Deployment ok.

--- a/www/citing.html
+++ b/www/citing.html
@@ -8,8 +8,8 @@
   
   <p>To cite this tools please note the folowing links :</p>
   <ul>
-  <li><i class="fa fa-github" aria-hidden="true"></i> : github link</li>
-    <li><i class="fa fa-server" aria-hidden="true"></i> : server link </li>
+  <li><i class="fa fa-github" aria-hidden="true"></i> GitHub link: <a href="https://github.com/NajlaBioinfo/protAAscan">https://github.com/NajlaBioinfo/protAAscan</a></li>
+    <li><i class="fa fa-server" aria-hidden="true"></i> Server link: <a href="https://wordscloud.shinyapps.io/protaascann/">https://wordscloud.shinyapps.io/protaascann/</a> </li>
       </ul>
       
       </body>
