--- a/www/sources.html
+++ b/www/sources.html
@@ -9,7 +9,7 @@
 <p><i class="fa fa-download" aria-hidden="true"></i> Sources</p>
 <ul>
   <li><i class="fa fa-github"></i> <a href="https://github.com/NajlaBioinfo">https://github.com/NajlaBioinfo/protAAscan</a></li>
-  <li><i class="fa fa-external-link"></i> <a href="https://hub.docker.com/u/najlabioinfo/shinyDocker">https://hub.docker.com/u/najlabioinfo/shinyDocker</a></li>
+  <li><i class="fa fa-external-link"></i> <a href="https://hub.docker.com/u/najlabioinfo">https://hub.docker.com/u/najlabioinfo/shinyDocker</a></li>
 </ul>
 
 </body>
